--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NewListActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
+        <activity android:name=".presentation.EditListActivity"></activity>
         <activity
-            android:name=".AboutActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:name=".presentation.NewListActivity"
+            android:parentActivityName=".presentation.MainActivity"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.AboutActivity"
+            android:parentActivityName=".presentation.MainActivity"></activity>
+        <activity
+            android:name=".presentation.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:theme="@style/AppTheme.NoActionBar">
