--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.EditListActivity"></activity>
+        <activity android:name=".presentation.EditListActivity">
+        </activity>
         <activity
             android:name=".presentation.NewListActivity"
-            android:parentActivityName=".presentation.MainActivity"></activity>
+            android:parentActivityName=".presentation.MainActivity">
+        </activity>
         <activity
             android:name=".presentation.AboutActivity"
-            android:parentActivityName=".presentation.MainActivity"></activity>
+            android:parentActivityName=".presentation.MainActivity">
+        </activity>
         <activity
             android:name=".presentation.MainActivity"
             android:label="@string/app_name"
@@ -24,7 +27,6 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
