--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".presentation.EditListActivity">
+        <activity android:name=".presentation.EditListActivity"
+            android:parentActivityName=".presentation.MainActivity">
         </activity>
         <activity
             android:name=".presentation.NewListActivity"
